fixed modal spilling over

--- a/src/css/main-menu-style.css
+++ b/src/css/main-menu-style.css
@@ -41,6 +41,7 @@
 
 .btn.btn-hover:hover,
 .btn.btn-custom-color:hover {
+  transform: scale(1.05);
   color: rgb(255, 255, 255) !important;
   background: rgb(20, 22, 28) !important;
   border: 2px solid rgb(230, 140, 255) !important;
@@ -104,7 +105,7 @@
 }
 
 .score-item:hover {
-  transform: scale(1.02);
+  transform: scale(1.03);
   background-color: rgba(255, 255, 255, 0.2);
 }
 
